Added Comments for info.html

--- a/info.html
+++ b/info.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,16 +8,20 @@
 </head>
 <body>
 
+<!-- Navigation bar -->
 <div class="navbar">
+    <!-- Mobile header for small screens -->
     <div class="mobile-header">
         Directory Page
     </div>
+    <!-- Hamburger menu for mobile navigation -->
     <div class="hamburger-menu">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
     </div>
+    <!-- Header links for navigation -->
     <div class="header-links">
         <a href="index.html" class="header-link">Welcome</a>
         <a href="about.html" class="header-link">About</a>
@@ -27,51 +30,66 @@
     </div>
 </div>
 
+<!-- Main heading -->
 <h1>Contact us </h1>
+
+<!-- Contact information table -->
 <table>
     <tr>
-      <th>Position</th>
-      <th>Name</th>
-      <th>Responsiblity</th>
-      <th>Phone</th>
-      <th>Email</th>
-      </tr>
-      <tr>
-        <td> President </td>
-        <td> Stephanie Beckmann</td>
-        <td> Any Concerns / Landscaping and Lighting</td>
-        <td> 502.802.0999</td>
-        <td> sbeckmann01@gmail.com</td>
-      </tr>
-      <tr>
-        <td> Secretary </td>
-        <td> Debbie Bluestone</td>
-        <td> Meeting Minutes, Newsletters, Social Media</td>
-        <td> 502.969.4310 </td>
-        <td> 12stoneyblue@gmail.com</td>
-      </tr> <tr>
-        <td> WebMaster </td>
-        <td> Diane Johnson</td>
-        <td> Webpage / Social Media</td>
-        <td> 502.641.9698</td>
-        <td> air0dlb01@gmail.com</td>
-      </tr> <tr>
-        <td> Member at Large </td>
-        <td> Denise Herdt</td>
-        <td> Any Concerns / Food Truck Signs</td>
-        <td> 502.641.6942</td>
-        <td> den2ber@aol.com</td>
-      </tr> <tr>
-        <td> Treasurer </td>
-        <td> Jeff Golliday</td>
-        <td> Bookkeeping</td>
-        <td> 919.609.5340</td>
-        <td> jeffgolliday@yahoo.com</td>
-      </tr> 
-    </table>
-	    <script src="script.js"></script>
-    <footer>
-        Copyright © 2024 by Charleswood Forest HOA
-    </footer>
-    </body>
-    </html>
+        <th>Position</th>
+        <th>Name</th>
+        <th>Responsibility</th>
+        <th>Phone</th>
+        <th>Email</th>
+    </tr>
+<tr>
+    <!-- President's contact information -->
+    <td>President</td>
+    <td>Stephanie Beckmann</td>
+    <td>Any Concerns / Landscaping and Lighting</td>
+    <td>502.802.0999</td>
+    <td>sbeckmann01@gmail.com</td>
+</tr>
+<tr>
+    <!-- Secretary's contact information -->
+    <td>Secretary</td>
+    <td>Debbie Bluestone</td>
+    <td>Meeting Minutes, Newsletters, Social Media</td>
+    <td>502.969.4310</td>
+    <td>12stoneyblue@gmail.com</td>
+</tr>
+<tr>
+    <!-- Webmaster's contact information -->
+    <td>WebMaster</td>
+    <td>Diane Johnson</td>
+    <td>Webpage / Social Media</td>
+    <td>502.641.9698</td>
+    <td>air0dlb01@gmail.com</td>
+</tr>
+<tr>
+    <!-- Member at Large's contact information -->
+    <td>Member at Large</td>
+    <td>Denise Herdt</td>
+    <td>Any Concerns / Food Truck Signs</td>
+    <td>502.641.6942</td>
+    <td>den2ber@aol.com</td>
+</tr>
+<tr>
+    <!-- Treasurer's contact information -->
+    <td>Treasurer</td>
+    <td>Jeff Golliday</td>
+    <td>Bookkeeping</td>
+    <td>919.609.5340</td>
+    <td>jeffgolliday@yahoo.com</td>
+</tr>
+</table>
+
+<!-- Link to external JavaScript file -->
+<script src="script.js"></script>
+
+<!-- Footer section -->
+<footer>
+    Copyright © 2024 by Charleswood Forest HOA
+</footer>
+</body>
+</html>
