--- a/members.html
+++ b/members.html
@@ -7,16 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<!-- Navigation bar -->
 <div class="navbar">
+    <!-- Mobile header for small screens -->
     <div class="mobile-header">
         Charleswood Forest HOA Website
     </div>
+    <!-- Hamburger menu for mobile navigation -->
     <div class="hamburger-menu">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
     </div>
+    <!-- Header links for navigation -->
     <div class="header-links">
         <a href="index.html" class="header-link">Welcome</a>
         <a href="about.html" class="header-link">About</a>
@@ -25,11 +30,24 @@
     </div>
 </div>
 
+<!-- Login form -->
 <form id="login-form">
+    <!-- Username input field -->
     <input id="username" type="text" name="username" placeholder="Username" required />
+    <!-- Error message for username -->
     <p id="username-err" style="display: none;">Please enter a valid Username</p>
+    <!-- Password input field -->
     <input id="password" type="password" name="password" placeholder="Password" required />
+    <!-- Submit button -->
     <input id="btn-submit" type="submit" value="Login" />
 </form>
+<br>
+<br>
+<br>
+<br>
+<!-- Footer section -->
+<footer>
+    Copyright © 2024 by Charleswood Forest HOA
+</footer>
 </body>
 </html>
