Adding error validation to members.html

--- a/members.html
+++ b/members.html
@@ -38,6 +38,10 @@
     <p id="username-err" style="display: none;">Please enter a valid Username</p>
     <!-- Password input field -->
     <input id="password" type="password" name="password" placeholder="Password" required />
+    <!-- Email input field -->
+    <input id="email" type="email" name="email" placeholder="Email" required />
+    <!-- Error message for email -->
+    <p id="email-err" style="display: none;">Please enter a valid Email</p>
     <!-- Submit button -->
     <input id="btn-submit" type="submit" value="Login" />
 </form>
@@ -45,6 +49,8 @@
 <br>
 <br>
 <br>
+<br>
+
 <!-- Footer section -->
 <footer>
     Copyright © 2024 by Charleswood Forest HOA
