Updated syntax issues

--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
 
 <!-- Closing message -->
 <h2>We look forward to calling you neighbor...</h2>
-
+<script src="script.js"></script>
 </body>
 </html>
