--- a/workingdir.html
+++ b/workingdir.html
@@ -18,3 +18,17 @@ Group 3 ([a-z\.]{2,5}) - Lastly, the third group matches the top level domain. T
 Therefore, with the regex expression above you can match many of the commonly used emails such as firstname.lastname@domain.com for example.
 
 
+let remainingDays = Math.ceil(
+  (christmasDate.getTime() - today.getTime()) /
+   (dayMilliseconds)
+);
+
+let today = new Date();
+let christmasYear = today.getFullYear();
+
+if (today.getMonth() == 11 && today.getDate() > 25) {
+  christmasYear = christmasYear + 1;
+}
+
+let christmasDate = new Date(christmasYear, 11, 25);
+let dayMilliseconds = 1000 * 60 * 60 * 24;
