--- a/members.html
+++ b/members.html
@@ -55,5 +55,7 @@
 <footer>
     Copyright © 2024 by Charleswood Forest HOA
 </footer>
+<!-- Link to external JavaScript file -->
+<script src="script.js"></script>
 </body>
 </html>
